# myautopy

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  questions.py
src/graph/: nodes.py  workflow.py
src/ingestion/: chunker.py  pdf_loader.py
src/prompts/: templates.py
src/retrieval/: vector_store.py
src/schemas/: models.py
