[project]
name = "jpmorgan-rag"
version = "0.1.0"
description = "LangGraph RAG system comparing J.P. Morgan 2025 forecast vs mid-year reality"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "I",
    "F401",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
